@@ -1,4 +1,4 @@
-# vnStat 2.10 configuration file
+# vnStat 2.11 configuration file
 #
 # lines starting with # or ; are comments, everything has default
 # values, remove ; before each option to change its value
